--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabTextColor="@android:color/white"
+        app:tabSelectedTextColor="@android:color/white"
         android:background="?attr/colorPrimary"/>
 
     <android.support.v4.view.ViewPager
